# jan-2024-python-drf

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: apps.py  urls.py  views.py
apps/auto_parks/: models.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py
apps/cars/: filter.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0003_alter_carmodel_brand_alter_carmodel_price_and_more.py  0006_carmodel_photo.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/auto_parks/: apps.py  serializers.py  views.py
backend/apps/cars/: consumers.py  managers.py  models.py  routing.py  (+4 more)
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/templates/: register.html  spam.html  test.html
cars/: filter.py  models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py  0002_carmodel_created_at_carmodel_updated_at.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  email_conf.py  jwt_conf.py  rest_conf.py
core/: paginations.py
core/dataclasses/: user_dataclass.py
core/enums/: action_token_enum.py
core/permissions/: is_admin_or_write_only.py
core/services/: email_service.py  jwt_service.py
first/: models.py  views.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
templates/: base.html  recovery.html
(+50 files in other folders)
